<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.TransactionFragment">

    <LinearLayout
        android:id="@+id/fragment_transaction_form"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:paddingStart="20dp"
        android:paddingEnd="30dp"
        android:orientation="vertical"
        android:gravity="top">

        <LinearLayout
            android:id="@+id/field_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fragment_transaction_hint_date"
                android:textSize="@dimen/fragmentTransactionText"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_text_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:layout_marginStart="@dimen/fragmentTransactionEditTextMarginStart"
                android:focusable="true"
                android:inputType="date"
                android:ems="10"
                android:hint="@string/fragment_transaction_hint_date"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/field_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fragment_transaction_hint_category"
                android:textSize="@dimen/fragmentTransactionText"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_text_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginStart="@dimen/fragmentTransactionEditTextMarginStart"
                android:inputType="textCapSentences"
                android:ems="10"
                android:hint="@string/fragment_transaction_hint_category" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/field_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fragment_transaction_hint_item_description"
                android:textSize="@dimen/fragmentTransactionText"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edit_text_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginStart="@dimen/fragmentTransactionEditTextMarginStart"
                android:inputType="textCapSentences"
                android:ems="10"
                android:hint="@string/fragment_transaction_hint_item_description" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/field_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fragment_transaction_hint_amount"
                android:textSize="@dimen/fragmentTransactionText"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_text_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginStart="@dimen/fragmentTransactionEditTextMarginStart"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/fragment_transaction_hint_amount" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_button_transaction_add_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignBottom="@+id/fragment_transaction_form"
        android:layout_centerHorizontal="true"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_menu_save"/>


</RelativeLayout>